--- a/index.html
+++ b/index.html
@@ -490,6 +490,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         </article>
       </div>
 
+	  <br><a href="./index_en.html" target="_top" id="version">English version</a>
+
       <!-- Footer -->
       <footer id="footer">
         <p class="copyright">
