--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <html>
   <head>
     <title>EMVC</title>
+    <meta name="description" content="Mécanisme d’authentification par carte à puce pour le chiffrement de disques durs par le logiciel VeraCrypt">
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -29,8 +30,7 @@
           <div class="inner">
             <h1>EMVeraCryptez votre disque avec votre CB</h1>
             <h5>
-              Conception et implémentation d’un mécanisme d’authentification par
-              carte à puce <br />
+              Conception et implémentation d’un mécanisme d’authentification par carte à puce <br />
               pour le chiffrement de disques durs par le logiciel VeraCrypt
             </h5>
           </div>
@@ -44,10 +44,10 @@
               <a href="#objectif"><b>Objectif</b></a>
             </li>
             <li>
-              <a href="#about"><b>Implémentation</b></a>
+              <a href="#implementation"><b>Implémentation</b></a>
             </li>
             <li>
-              <a href="#contact"><b>Équipe</b></a>
+              <a href="#equipe"><b>Équipe</b></a>
             </li>
             <li>
               <a href="#elements"><b>Code</b></a>
@@ -58,70 +58,67 @@
 
       <!-- Main -->
       <div id="main">
-        <!-- Intro -->
+        <!-- Contexte -->
         <article id="contexte">
-          <h2 class="major">Contexte</h2>
-          <!-- <span class="image main"><img src="images/pic01.jpg" alt="" /></span> -->
+          <h2 class="major">Qu'est-ce que VeraCrypt ?</h2>
           <p>
             Ce projet s’articule autour d’un logiciel de cybersécurité dont le code est open source : <a href="https://veracrypt.fr/en/Home.html">VeraCrypt</a>.
           </p>
           <p>
-			Disponible sous Windows, Linux et macOS, VeraCrypt permet à ses utilisateurs de créer des volumes de stockage virtuels chiffrés 
-			dissimulables voire même de chiffrer directement des partitions du système d’exploitation sur lequel il est installé. <br>
+            Disponible sous Windows, Linux et macOS, VeraCrypt permet à ses utilisateurs de créer des volumes de stockage virtuels chiffrés 
+            dissimulables voire même de chiffrer directement des partitions du système d’exploitation sur lequel il est installé. <br>
             VeraCrypt succède au logiciel TrueCrypt et est développé depuis fin 2014 par IDRIX, une société dirigée par Mounir Idrassi. 
-			Des ingénieurs volontaires contribuent aussi au développement du logiciel. 
+            Des ingénieurs volontaires contribuent aussi au développement du logiciel. 
           </p>
-		  <p>
-			Avec un total de plus de 1,2 million de téléchargements depuis juin 2013, VeraCrypt	est majoritairement téléchargé depuis des pays 
-			du nord du globe, tels que les États-Unis, la France, l’Allemagne, la Pologne ou encore la Russie. Les utilisateurs de ce logiciel 
-			présentent des profils variés ayant comme objectif commun de protéger leurs données. VeraCrypt est une référence dans son domaine. 
-			Il a notamment été intégré par Reporters Sans Frontières dans son Guide de Protection des Sources de 2021. VeraCrypt fait 
-			aussi partie des logiciels libres de droits préconisés par l’État français depuis son intégration au SILL en 2018.
-		  </p>
-		  <p>
-			La sécurité du code source de VeraCrypt a été auditée à deux reprises : une première fois en 2016 par Quarkslab, une entreprise 
-			française spécialisée dans la protection et l'analyse de logiciels, puis une deuxième fois en 2020 par le Fraunhofer Institute 
-			for Secure Information Technology au nom du Federal Office for Information Security (BSI) d’Allemagne.
-		  </p>
+          <p>
+            Avec un total de plus de 1,2 million de téléchargements depuis juin 2013, VeraCrypt	est majoritairement téléchargé depuis des pays 
+            du nord du globe, tels que les États-Unis, la France, l’Allemagne, la Pologne ou encore la Russie. Les utilisateurs de ce logiciel 
+            présentent des profils variés ayant comme objectif commun de protéger leurs données. VeraCrypt est une référence dans son domaine. 
+            Il a notamment été intégré par Reporters Sans Frontières dans son Guide de Protection des Sources de 2021. VeraCrypt fait 
+            aussi partie des logiciels libres de droits préconisés par l’État français depuis son intégration au SILL en 2018.
+          </p>
+          <p>
+            La sécurité du code source de VeraCrypt a été auditée à deux reprises : une première fois en 2016 par Quarkslab, une entreprise 
+            française spécialisée dans la protection et l'analyse de logiciels, puis une deuxième fois en 2020 par le Fraunhofer Institute 
+            for Secure Information Technology au nom du Federal Office for Information Security (BSI) d’Allemagne.
+          </p>
         </article>
 
-        <!-- Work -->
+        <!-- Objectif -->
         <article id="objectif">
-          <h2 class="major">Objectif</h2>
-          <!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
+          <h2 class="major">Quel est notre but ?</h2>
           <p>
             Actuellement, la sécurité du chiffrement de VeraCrypt est basée sur l’utilisation d’un mot de passe connu uniquement du propriétaire 
-			du volume. Ce dernier a également la possibilité d’utiliser un ou plusieurs fichiers additionnels afin de renforcer l’entropie de 
-			son mot de passe : les keyfiles. Ces fichiers, intégrés dans le processus cryptographique de VeraCrypt, peuvent être
-			assimilés à un facteur de double authentification.
+            du volume. Ce dernier a également la possibilité d’utiliser un ou plusieurs fichiers additionnels afin de renforcer l’entropie de 
+            son mot de passe : les keyfiles. Ces fichiers, intégrés dans le processus cryptographique de VeraCrypt, peuvent être
+            assimilés à un facteur de double authentification.
           </p>
-		  <p>
-			Les keyfiles peuvent être stockés sur n'importe quel support, il est possible d’utiliser une mémoire amovible comme une clé USB par 
-			exemple. VeraCrypt permet aussi à ses utilisateurs de stocker leurs keyfiles sur une carte à puce de type PKCS#11, un type de carte 
-			est dédié à une utilisation cyber-sécuritaire.
-		  </p>
-		  <p>
-			Seulement, cette approche de stockage des keyfiles sur une carte PKCS#11, bien qu'étant la plus sécurisée, est dédiée à des 
-			utilisateurs appartenant au monde de la cybersécurité, qu’ils soient des professionnels ou des amateurs compétents. De plus, elle 
-			réduit drastiquement le déni plausible de l’utilisateur. La présence d’une carte PCKS#11 dans le portefeuille d’un reporter peut 
-			attirer l’attention et la suspicion des autorités lors de son passage par les douanes d’un état hostile.
-		  </p>
-		  <p>
-			L’utilisation de cartes à puce suivant la norme EMV est une alternative à l’approche mentionnée ci-dessus. Ces cartes de paiement sont 
-			répandues dans le monde entier pour une utilisation sans aucun lien avec le chiffrement de volumes virtuels. Avec le passeport, il s’agit 
-			certainement des deux dispositifs les plus répandus sur le globe et normés par des standards internationaux. La quasi-totalité des 
-			utilisateurs de VeraCrypt possèdent donc au moins une carte EMV.
-		  </p>
-		  <p>
-			Utiliser des données internes à la carte EMV du créateur du volume comme keyfiles est donc une façon de mettre en place sa double 
-			authentification.
-		  </p>
+          <p>
+            Les keyfiles peuvent être stockés sur n'importe quel support, il est possible d’utiliser une mémoire amovible comme une clé USB par 
+            exemple. VeraCrypt permet aussi à ses utilisateurs de stocker leurs keyfiles sur une carte à puce de type PKCS#11, un type de carte 
+            est dédié à une utilisation cyber-sécuritaire.
+          </p>
+          <p>
+            Seulement, cette approche de stockage des keyfiles sur une carte PKCS#11, bien qu'étant la plus sécurisée, est dédiée à des 
+            utilisateurs appartenant au monde de la cybersécurité, qu’ils soient des professionnels ou des amateurs compétents. De plus, elle 
+            réduit drastiquement le déni plausible de l’utilisateur. La présence d’une carte PCKS#11 dans le portefeuille d’un reporter peut 
+            attirer l’attention et la suspicion des autorités lors de son passage par les douanes d’un état hostile.
+          </p>
+          <p>
+            L’utilisation de cartes à puce suivant la norme EMV est une alternative à l’approche mentionnée ci-dessus. Ces cartes de paiement sont 
+            répandues dans le monde entier pour une utilisation sans aucun lien avec le chiffrement de volumes virtuels. Avec le passeport, il s’agit 
+            certainement des deux dispositifs les plus répandus sur le globe et normés par des standards internationaux. La quasi-totalité des 
+            utilisateurs de VeraCrypt possèdent donc au moins une carte EMV.
+          </p>
+          <p>
+            Utiliser des données internes à la carte EMV du créateur du volume comme keyfiles est donc une façon de mettre en place sa double 
+            authentification.
+          </p>
         </article>
 
-        <!-- About -->
-        <article id="about">
-          <h2 class="major">About</h2>
-          <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
+        <!-- Implémentation -->
+        <article id="implementation">
+          <h2 class="major">Qu'avons nous réalisé ?</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent
             eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam
@@ -131,6 +128,43 @@
             Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit
             amet.
           </p>
+        </article>
+
+        <!-- Équipe -->
+        <article id="equipe">
+          <h2 class="major">Qui sommes nous ?</h2>
+          <span class="image main insa"><img src="images/Logo_INSA_BLANC_RVB.png" alt="" /></span>
+          <p>
+            Notre équipe est constituée de 7 étudiants en 4ème année au département informatique de l'INSA de Rennes :
+          </p>
+          <ul>
+            <li>Mathis CAISSON</li>
+            <li>
+              <a href="https://www.linkedin.com/in/andrei-cocan-b9193b232/">Andrei COCAN</a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/guilhem-grac-3429a6218/">Guilhem GRAC</a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/dorian-humeau-305864231/">Dorian HUMEAU</a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/le-roux-francois/">François LE ROUX</a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/mathis-mauvisseau">Mathis MAUVISSEAU</a>
+            </li>
+            <li>
+              <a href="https://linkedin.com/in/bricenamy">Brice NAMY</a>
+            </li>
+          </ul>
+          <p>
+            Ce projet académique, réalisé sur l'année 2022-2023, est encadré par messieurs Gildas AVOINE et Jules DUPAS.
+          </p>
+          <!-- <ul>
+            <li><a href="https://www.avoine.net/">Gildas AVOINE</a> : enseignant à l'INSA Rennes et chercheur à l'IRISA</li>
+            <li><a href="https://www.linkedin.com/in/jules-dupas-0784a3254/">Jules DUPAS</a> : ingénieur chez Formance (YC S21)</li>
+          </ul> -->
         </article>
 
         <!-- Contact -->
