Icon, implementation and code sections, profiles links

--- a/index_en.html
+++ b/index_en.html
@@ -29,8 +29,7 @@
           <div class="inner">
             <h1>Encrypt your drive with your credit card</h1>
             <h5>
-                Design and implementation of a smart card authentication system <br>
-                for the encryption of hard disks by the VeraCrypt software
+                Todo, or not todo, that is the question.
             </h5>
           </div>
         </div>
