--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 <html>
   <head>
     <title>EMVC</title>
-    <meta name="description" content="Mécanisme d’authentification par carte à puce pour le chiffrement de disques durs par le logiciel VeraCrypt">
+    <link rel="shortcut icon" href="images/lock.webp" />
+    <meta
+      name="description"
+      content="Mécanisme d’authentification par carte à puce pour le chiffrement de disques durs par le logiciel VeraCrypt"
+    />
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -30,7 +34,8 @@
           <div class="inner">
             <h1>EMVeraCryptez votre disque avec votre CB</h1>
             <h5>
-              Conception et implémentation d’un mécanisme d’authentification par carte à puce <br />
+              Conception et implémentation d’un mécanisme d’authentification par
+              carte à puce <br />
               pour le chiffrement de disques durs par le logiciel VeraCrypt
             </h5>
           </div>
@@ -50,8 +55,11 @@
               <a href="#equipe"><b>Équipe</b></a>
             </li>
             <li>
-              <a href="#elements"><b>Code</b></a>
+              <a href="#code"><b>Code</b></a>
             </li>
+            <!-- <li>
+              <a href="#elements"><b>Elements</b></a>
+            </li> -->
           </ul>
         </nav>
       </header>
@@ -62,25 +70,39 @@
         <article id="contexte">
           <h2 class="major">Qu'est-ce que VeraCrypt ?</h2>
           <p>
-            Ce projet s’articule autour d’un logiciel de cybersécurité dont le code est open source : <a href="https://veracrypt.fr/en/Home.html">VeraCrypt</a>.
+            Ce projet s’articule autour d’un logiciel de cybersécurité dont le
+            code est open source :
+            <a href="https://veracrypt.fr/en/Home.html">VeraCrypt</a>.
           </p>
           <p>
-            Disponible sous Windows, Linux et macOS, VeraCrypt permet à ses utilisateurs de créer des volumes de stockage virtuels chiffrés 
-            dissimulables voire même de chiffrer directement des partitions du système d’exploitation sur lequel il est installé. <br>
-            VeraCrypt succède au logiciel TrueCrypt et est développé depuis fin 2014 par IDRIX, une société dirigée par Mounir Idrassi. 
-            Des ingénieurs volontaires contribuent aussi au développement du logiciel. 
+            Disponible sous Windows, Linux et macOS, VeraCrypt permet à ses
+            utilisateurs de créer des volumes de stockage virtuels chiffrés
+            dissimulables voire même de chiffrer directement des partitions du
+            système d’exploitation sur lequel il est installé. <br />
+            VeraCrypt succède au logiciel TrueCrypt et est développé depuis fin
+            2014 par IDRIX, une société dirigée par Mounir Idrassi. Des
+            ingénieurs volontaires contribuent aussi au développement du
+            logiciel.
           </p>
           <p>
-            Avec un total de plus de 1,2 million de téléchargements depuis juin 2013, VeraCrypt	est majoritairement téléchargé depuis des pays 
-            du nord du globe, tels que les États-Unis, la France, l’Allemagne, la Pologne ou encore la Russie. Les utilisateurs de ce logiciel 
-            présentent des profils variés ayant comme objectif commun de protéger leurs données. VeraCrypt est une référence dans son domaine. 
-            Il a notamment été intégré par Reporters Sans Frontières dans son Guide de Protection des Sources de 2021. VeraCrypt fait 
-            aussi partie des logiciels libres de droits préconisés par l’État français depuis son intégration au SILL en 2018.
+            Avec un total de plus de 1,2 million de téléchargements depuis juin
+            2013, VeraCrypt est majoritairement téléchargé depuis des pays du
+            nord du globe, tels que les États-Unis, la France, l’Allemagne, la
+            Pologne ou encore la Russie. Les utilisateurs de ce logiciel
+            présentent des profils variés ayant comme objectif commun de
+            protéger leurs données. VeraCrypt est une référence dans son
+            domaine. Il a notamment été intégré par Reporters Sans Frontières
+            dans son Guide de Protection des Sources de 2021. VeraCrypt fait
+            aussi partie des logiciels libres de droits préconisés par l’État
+            français depuis son intégration au SILL en 2018.
           </p>
           <p>
-            La sécurité du code source de VeraCrypt a été auditée à deux reprises : une première fois en 2016 par Quarkslab, une entreprise 
-            française spécialisée dans la protection et l'analyse de logiciels, puis une deuxième fois en 2020 par le Fraunhofer Institute 
-            for Secure Information Technology au nom du Federal Office for Information Security (BSI) d’Allemagne.
+            La sécurité du code source de VeraCrypt a été auditée à deux
+            reprises : une première fois en 2016 par Quarkslab, une entreprise
+            française spécialisée dans la protection et l'analyse de logiciels,
+            puis une deuxième fois en 2020 par le Fraunhofer Institute for
+            Secure Information Technology au nom du Federal Office for
+            Information Security (BSI) d’Allemagne.
           </p>
         </article>
 
@@ -88,30 +110,44 @@
         <article id="objectif">
           <h2 class="major">Quel est notre but ?</h2>
           <p>
-            Actuellement, la sécurité du chiffrement de VeraCrypt est basée sur l’utilisation d’un mot de passe connu uniquement du propriétaire 
-            du volume. Ce dernier a également la possibilité d’utiliser un ou plusieurs fichiers additionnels afin de renforcer l’entropie de 
-            son mot de passe : les keyfiles. Ces fichiers, intégrés dans le processus cryptographique de VeraCrypt, peuvent être
-            assimilés à un facteur de double authentification.
+            Actuellement, la sécurité du chiffrement de VeraCrypt est basée sur
+            l’utilisation d’un mot de passe connu uniquement du propriétaire du
+            volume. Ce dernier a également la possibilité d’utiliser un ou
+            plusieurs fichiers additionnels afin de renforcer l’entropie de son
+            mot de passe : les keyfiles. Ces fichiers, intégrés dans le
+            processus cryptographique de VeraCrypt, peuvent être assimilés à un
+            facteur de double authentification.
           </p>
           <p>
-            Les keyfiles peuvent être stockés sur n'importe quel support, il est possible d’utiliser une mémoire amovible comme une clé USB par 
-            exemple. VeraCrypt permet aussi à ses utilisateurs de stocker leurs keyfiles sur une carte à puce de type PKCS#11, un type de carte 
-            est dédié à une utilisation cyber-sécuritaire.
+            Les keyfiles peuvent être stockés sur n'importe quel support, il est
+            possible d’utiliser une mémoire amovible comme une clé USB par
+            exemple. VeraCrypt permet aussi à ses utilisateurs de stocker leurs
+            keyfiles sur une carte à puce de type PKCS#11, un type de carte est
+            dédié à une utilisation cyber-sécuritaire.
           </p>
           <p>
-            Seulement, cette approche de stockage des keyfiles sur une carte PKCS#11, bien qu'étant la plus sécurisée, est dédiée à des 
-            utilisateurs appartenant au monde de la cybersécurité, qu’ils soient des professionnels ou des amateurs compétents. De plus, elle 
-            réduit drastiquement le déni plausible de l’utilisateur. La présence d’une carte PCKS#11 dans le portefeuille d’un reporter peut 
-            attirer l’attention et la suspicion des autorités lors de son passage par les douanes d’un état hostile.
+            Seulement, cette approche de stockage des keyfiles sur une carte
+            PKCS#11, bien qu'étant la plus sécurisée, est dédiée à des
+            utilisateurs appartenant au monde de la cybersécurité, qu’ils soient
+            des professionnels ou des amateurs compétents. De plus, elle réduit
+            drastiquement le déni plausible de l’utilisateur. La présence d’une
+            carte PCKS#11 dans le portefeuille d’un reporter peut attirer
+            l’attention et la suspicion des autorités lors de son passage par
+            les douanes d’un état hostile.
           </p>
           <p>
-            L’utilisation de cartes à puce suivant la norme EMV est une alternative à l’approche mentionnée ci-dessus. Ces cartes de paiement sont 
-            répandues dans le monde entier pour une utilisation sans aucun lien avec le chiffrement de volumes virtuels. Avec le passeport, il s’agit 
-            certainement des deux dispositifs les plus répandus sur le globe et normés par des standards internationaux. La quasi-totalité des 
-            utilisateurs de VeraCrypt possèdent donc au moins une carte EMV.
+            L’utilisation de cartes à puce suivant la norme EMV est une
+            alternative à l’approche mentionnée ci-dessus. Ces cartes de
+            paiement sont répandues dans le monde entier pour une utilisation
+            sans aucun lien avec le chiffrement de volumes virtuels. Avec le
+            passeport, il s’agit certainement des deux dispositifs les plus
+            répandus sur le globe et normés par des standards internationaux. La
+            quasi-totalité des utilisateurs de VeraCrypt possèdent donc au moins
+            une carte EMV.
           </p>
           <p>
-            Utiliser des données internes à la carte EMV du créateur du volume comme keyfiles est donc une façon de mettre en place sa double 
+            Utiliser des données internes à la carte EMV du créateur du volume
+            comme keyfiles est donc une façon de mettre en place sa double
             authentification.
           </p>
         </article>
@@ -119,52 +155,164 @@
         <!-- Implémentation -->
         <article id="implementation">
           <h2 class="major">Qu'avons nous réalisé ?</h2>
+          <h4>Philosophie du projet</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent
-            eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam
-            erat volutpat. Praesent urna nisi, fringila lorem et vehicula
-            lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.
-            Aliquam libero et malesuada fames ac ante ipsum primis in faucibus.
-            Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit
-            amet.
+            Tout au long de ce projet, nous avons dû apporter nos modifications
+            au code source d'une application existante. Nous devions nous
+            assurer que nous n'introduisions pas de failles de sécurité, que
+            notre code s'intégrait naturellement dans le code existant, que nos
+            modifications étaient minimes afin de faciliter la relecture par
+            d'autre développeurs et enfin que l'interface restait sensiblement
+            le même pour que l'utilisateur ne soit pas trop perturbé par ces
+            changements.
+          </p>
+          <p>
+            Techniquement, ce projet se divise en deux étapes : l'extraction des
+            données d'une carte EMV et la modification du code source de
+            VeraCrypt afin d'ajouter cette fonctionnalité.
+          </p>
+          <hr />
+          <h4>Extraction des données EMV</h4>
+          <p>
+            Selon la norme ISO/IEC 7816 sur laquelle s’appuie le standard EMV
+            pour la communication avec contact, le dialogue avec la carte à puce
+            se fait à l'aide de commandes APDU dont la structure contient de
+            nombreux champs permettant de préciser quelles informations
+            extraire.
+          </p>
+          <p>
+            Le module EMVExtractor a donc été imaginé pour assurer la
+            communication entre VeraCrypt et la carte EMV à travers le lecteur
+            de cartes de l’utilisateur. Pour faire face à la diversité de
+            lecteurs sur le marché, Microsoft a développé le standard de
+            communication Personal Computer/Smart Card. Notre choix s'est tourné
+            vers la librairie Winscard suivant ce standard et étant disponible à
+            la fois nativement sous Windows, mais aussi sous Linux ou macOS via
+            le paquet PCSCLite.
+          </p>
+
+          <span class="image main pcsc"
+            ><img src="images/interface.png" alt=""
+          /></span>
+          <p>
+            Concernant les données à extraire de la carte EMV pour les utiliser
+            comme keyfiles, les certificats ICC Public Key Certificate et ISSUER
+            Public Key Certificate ainsi que les données Card Production Life
+            Cycle ont été retenus de part leurs unicité propre à la carte.
+          </p>
+          <hr />
+          <h4>Modification de VeraCrypt</h4>
+          <p>
+            Réinventer la roue étant inutile, nous nous sommes inspiré de
+            l'implémentation actuelle de l'utilisation de cartes PKCS#11 dans
+            VeraCrypt et l'avons adaptée pour les cartes EMV. Nous avons donc
+            réutilisé la fenêtre de selection des keyfiles sur des cartes à puce
+            et y avons ajouté un modèle dédié aux cartes EMV. Les quatre
+            derniers chiffres des numéros des cartes EMV connectées sont
+            affichés pour en permettre la sélection.
+          </p>
+          <span class="image main pcsc"
+            ><img src="images/new_interface.png" alt=""
+          /></span>
+          <p>
+            Les cartes de type EMV n'étant disponibles qu'en lecture, certaines
+            fonctionnalité comme la suppression de données (bouton
+            <i>Effacer</i>) ont été désactivées.
+          </p>
+          <p>
+            En général les utilisateurs de logiciel de cybersécurité aiment être
+            en maîtrise complète de fonctionnalités de l’application. Ainsi,
+            nous avons rendu optionnelle la fonctionnalité EMV (désactivée par
+            défaut) dans les paramètres du logiciel.
           </p>
         </article>
 
         <!-- Équipe -->
         <article id="equipe">
           <h2 class="major">Qui sommes nous ?</h2>
-          <span class="image main insa"><img src="images/Logo_INSA_BLANC_RVB.png" alt="" /></span>
+          <span class="image main insa"
+            ><img src="images/Logo_INSA_BLANC_RVB.png" alt=""
+          /></span>
           <p>
-            Notre équipe est constituée de 7 étudiants en 4ème année au département informatique de l'INSA de Rennes :
+            Notre équipe est constituée de 7 étudiants en 4ème année au
+            département informatique de l'INSA de Rennes :
           </p>
           <ul>
-            <li>Mathis CAISSON</li>
             <li>
-              <a href="https://www.linkedin.com/in/andrei-cocan-b9193b232/">Andrei COCAN</a>
+              <a href="https://www.linkedin.com/in/mathis-caisson-167574224"
+                >Mathis CAISSON</a
+              >
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/guilhem-grac-3429a6218/">Guilhem GRAC</a>
+              <a href="https://www.linkedin.com/in/andrei-cocan-b9193b232/"
+                >Andrei COCAN</a
+              >
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/dorian-humeau-305864231/">Dorian HUMEAU</a>
+              <a href="https://www.linkedin.com/in/guilhem-grac-3429a6218/"
+                >Guilhem GRAC</a
+              >
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/le-roux-francois/">François LE ROUX</a>
+              <a href="https://www.linkedin.com/in/dorian-humeau-305864231/"
+                >Dorian HUMEAU</a
+              >
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/mathis-mauvisseau">Mathis MAUVISSEAU</a>
+              <a href="https://www.linkedin.com/in/le-roux-francois/"
+                >François LE ROUX</a
+              >
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/mathis-mauvisseau"
+                >Mathis MAUVISSEAU</a
+              >
             </li>
             <li>
               <a href="https://linkedin.com/in/bricenamy">Brice NAMY</a>
             </li>
           </ul>
           <p>
-            Ce projet académique, réalisé sur l'année 2022-2023, est encadré par messieurs Gildas AVOINE et Jules DUPAS.
+            Ce projet académique, réalisé sur l'année 2022-2023, est encadré par
+            messieurs Gildas AVOINE et Jules DUPAS.
           </p>
-          <!-- <ul>
-            <li><a href="https://www.avoine.net/">Gildas AVOINE</a> : enseignant à l'INSA Rennes et chercheur à l'IRISA</li>
-            <li><a href="https://www.linkedin.com/in/jules-dupas-0784a3254/">Jules DUPAS</a> : ingénieur chez Formance (YC S21)</li>
-          </ul> -->
+        </article>
+
+        <!-- Code -->
+        <article id="code">
+          <h2 class="major">Un coup d'oeil ?</h2>
+          <p>
+            Afin de faciliter le stockage et la gestion des productions de ce
+            projet, nous avons créé une
+            <b>organisation sur Github</b> disponible ici
+            <a
+              href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO"
+              class="icon brands fa-github"
+              ><span class="label">Github</span></a
+            >. L'entièreté du code que nous avons produit y est réparti dans des
+            dépôts dédiés.
+          </p>
+          <ul class="alt">
+            <li>
+              <strong>VeraCrypt_EMV</strong> est un fork du code source de
+              VeraCrypt que nous avons modifié sur la branche <i>dev</i> pour y
+              ajouter notre fonctionnalité.
+            </li>
+            <li>
+              <strong>EMV_Extractor</strong> contient un POC en python et sa
+              traduction en c++ permettant d'extraire les certificats et données
+              de cartes à puce de type EMV.
+            </li>
+            <li>
+              <strong>Web_page</strong> correspond au code source de la page que
+              vous êtes actuellement en train de regarder.
+            </li>
+            <li>
+              <strong>Rapports</strong> stocke les versions PDF des rapports que
+              nous avons écrit tout au long des différentes phases du projet (en
+              français uniquement).
+            </li>
+          </ul>
         </article>
 
         <!-- Contact -->
@@ -524,13 +672,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
         </article>
       </div>
 
-	  <br><a href="./index_en.html" target="_top" id="version">English version</a>
-
       <!-- Footer -->
       <footer id="footer">
-        <p class="copyright">
+        <a href="./index_en.html" target="_top" id="version">English version</a>
+        <!-- <p class="copyright">
           &copy; Send bitcoin or get hacked >_</a>
-        </p>
+        </p> -->
       </footer>
     </div>
 
