Add link to each github repo

--- a/index.html
+++ b/index.html
@@ -294,21 +294,21 @@
           </p>
           <ul class="alt">
             <li>
-              <strong>VeraCrypt_EMV</strong> est un fork du code source de
+              <a href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/VeraCrypt_EMV"><strong>VeraCrypt_EMV</strong></a> est un fork du code source de
               VeraCrypt que nous avons modifié sur la branche <i>dev</i> pour y
               ajouter notre fonctionnalité.
             </li>
             <li>
-              <strong>EMV_Extractor</strong> contient un POC en python et sa
+              <a href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/EMV_Extractor"><strong>EMV_Extractor</strong></a> contient un POC en python et sa
               traduction en c++ permettant d'extraire les certificats et données
               de cartes à puce de type EMV.
             </li>
             <li>
-              <strong>Web_page</strong> correspond au code source de la page que
+              <a href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/Web_page"><strong>Web_page</strong></a> correspond au code source de la page que
               vous êtes actuellement en train de regarder.
             </li>
             <li>
-              <strong>Rapports</strong> stocke les versions PDF des rapports que
+              <a href="https://github.com/veracrypt-EMV-INSA-Rennes-4INFO/Reports"><strong>Rapports</strong></a> stocke les versions PDF des rapports que
               nous avons écrit tout au long des différentes phases du projet (en
               français uniquement).
             </li>
